<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arkadiy.enter.imenu.MainActivity">


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="629dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/linearLayout"
        android:layout_toRightOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">


        <LinearLayout
            android:id="@+id/linearCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/light"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:onClick="loadAll"
                android:text="Light Drinks" />


            <Button
                android:id="@+id/beers"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:onClick="loadAll"
                android:text="Beer" />


            <Button
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:onClick="loadAll"
                android:text="blabla" />


            <Button
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:onClick="loadAll"
                android:text="blabla" />


            <Button
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:onClick="loadAll"
                android:text="blabla" />


            <Button
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:onClick="loadAll"
                android:text="blabla" />


            <Button
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:onClick="loadAll"
                android:text="blabla" />


            <Button
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:onClick="loadAll"
                android:text="blabla" />
            >


            <Button
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:onClick="loadAll"
                android:text="blabla" />


        </LinearLayout>

    </HorizontalScrollView>



    <RelativeLayout
        android:id="@+id/relativeLayoutMonitorCalulator"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/darker_gray">

        <TextView
            android:id="@+id/editTextScreenCalc"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="500dp"
        android:id="@+id/relativeLayoutSummariesScreen"
        android:layout_below="@id/relativeLayoutMonitorCalulator"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/holo_orange_dark">

        <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"

            android:text="@string/TextViewPric" />

        <TextView
            android:id="@+id/textViewAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/TextViewAmount" />

        <TextView
            android:id="@+id/textViewProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/TextViewProductName" />

        <ListView
            android:id="@+id/listViewPrice"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewPrice"
            android:layout_marginTop="30dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewAmount"
            android:layout_alignStart="@+id/textViewAmount"
            android:layout_below="@+id/listViewPrice"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:text="TextView" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="270dp"
        android:layout_height="215dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="83dp"
        android:layout_marginStart="83dp">


        <Button
            android:id="@+id/buttonNumber0"
            android:layout_width="72dp"
            android:layout_height="64dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:onClick="calc_onClick"
            android:layout_marginRight="-7dip"
            android:layout_marginTop="-11dip"

            android:text="0" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="72dp"
            android:layout_height="64dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/buttonNumber0"
            android:layout_weight="0"
            android:onClick="calc_onClick"
            android:layout_marginRight="-7dip"
            android:layout_marginTop="-11dip"

            android:text="C" />


        <Button
            android:id="@+id/buttonDot"
            android:layout_width="72dp"
            android:layout_height="64dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/buttonClear"
            android:onClick="calc_onClick"
            android:layout_marginRight="-7dip"
            android:layout_marginTop="-11dip"

            android:text="." />

        <Button
            android:id="@+id/buttonMinusinus"
            android:layout_width="72dp"
            android:layout_height="64dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/buttonDot"
            android:onClick="calc_onClick"
            android:layout_marginRight="-7dip"
            android:layout_marginTop="-11dip"

            android:text="-" />

        <Button
            android:id="@+id/buttonNumber1"
            android:layout_width="72dp"
            android:layout_height="64dp"
            android:layout_above="@+id/buttonNumber0"
            android:layout_alignParentLeft="true"
            android:onClick="calc_onClick"
            android:layout_marginRight="-7dip"
            android:layout_marginTop="-11dip"

            android:text="1" />

        <Button
            android:id="@+id/buttonNumber2"
            android:layout_width="72dp"
            android:layout_height="64dp"
            android:layout_above="@+id/buttonNumber0"
            android:layout_toRightOf="@+id/buttonNumber1"
            android:onClick="calc_onClick"
            android:layout_marginRight="-7dip"
            android:layout_marginTop="-11dip"

            android:text="2" />

        <Button
            android:id="@+id/buttonNumber3"
            android:layout_width="72dp"
            android:layout_height="64dp"
            android:layout_above="@+id/buttonDot"
            android:layout_toRightOf="@+id/buttonNumber2"
            android:onClick="calc_onClick"
            android:layout_marginRight="-7dip"
            android:layout_marginTop="-11dip"

            android:text="3" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="72dp"
            android:layout_height="64dp"
            android:layout_above="@+id/buttonMinusinus"
            android:layout_toRightOf="@+id/buttonDot"
            android:onClick="calc_onClick"
            android:layout_marginRight="-7dip"
            android:layout_marginTop="-11dip"

            android:text="+" />

        <Button
            android:id="@+id/buttonNumber4"
            android:layout_width="72dp"
            android:layout_height="64dp"
            android:layout_above="@+id/buttonNumber1"
            android:layout_alignParentLeft="true"
            android:onClick="calc_onClick"
            android:layout_marginRight="-7dip"
            android:layout_marginTop="-11dip"

            android:text="4" />

        <Button
            android:id="@+id/buttonNumber5"
            android:layout_width="72dp"
            android:layout_height="64dp"
            android:layout_above="@+id/buttonNumber2"
            android:layout_toRightOf="@+id/buttonNumber1"
            android:onClick="calc_onClick"
            android:layout_marginRight="-7dip"
            android:layout_marginTop="-11dip"

            android:text="5" />

        <Button
            android:id="@+id/buttonNumber6"
            android:layout_width="72dp"
            android:layout_height="64dp"
            android:layout_above="@+id/buttonNumber3"
            android:layout_toRightOf="@+id/buttonNumber2"
            android:onClick="calc_onClick"
            android:layout_marginRight="-7dip"
            android:layout_marginTop="-11dip"

            android:text="6" />

        <Button
            android:id="@+id/buttonMultip"
            android:layout_width="72dp"
            android:layout_height="64dp"
            android:layout_above="@+id/buttonPlus"
            android:layout_toRightOf="@+id/buttonNumber3"
            android:onClick="calc_onClick"
            android:layout_marginRight="-7dip"
            android:layout_marginTop="-11dip"

            android:text="*" />

        <Button
            android:id="@+id/buttonNumber7"
            android:layout_width="72dp"
            android:layout_height="64dp"
            android:layout_above="@+id/buttonNumber4"
            android:layout_alignParentLeft="true"
            android:onClick="calc_onClick"
            android:layout_marginRight="-7dip"
            android:layout_marginTop="-5dip"
            android:text="7"
            />

        <Button
            android:id="@+id/buttonNumber8"
            android:layout_width="72dp"
            android:layout_height="64dp"
            android:layout_above="@+id/buttonNumber5"
            android:layout_toRightOf="@+id/buttonNumber4"
            android:layout_marginRight="78dip"
            android:onClick="calc_onClick"
            android:layout_marginTop="-5dip"
            android:text="8" />


        <Button
            android:id="@+id/buttonNumber9"
            android:layout_width="72dp"
            android:layout_height="64dp"
            android:layout_above="@+id/buttonNumber6"
            android:layout_toRightOf="@+id/buttonNumber5"
            android:onClick="calc_onClick"
            android:layout_marginTop="-5dip"
            android:text="9" />

        <Button
            android:id="@+id/buttonEnter"
            android:layout_width="72dp"
            android:layout_height="64dp"
            android:layout_above="@+id/buttonMultip"
            android:layout_toRightOf="@+id/buttonNumber6"
            android:onClick="calc_onClick"
            android:layout_marginTop="-5dip"
            android:text="@string/ButtonEnter" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:paddingTop="100dp"
        android:id="@+id/linearLayout">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonFast9"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="הוספת מוצרים"
                    android:onClick="goToAddProd"/>

                <Button
                    android:id="@+id/buttonFast8"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="Button" />

                <Button
                    android:id="@+id/buttonFast6"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="Button" />

                <Button
                    android:id="@+id/buttonFast7"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="Button" />

                <Button
                    android:id="@+id/buttonFast15"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="Button" />

                <Button
                    android:id="@+id/buttonFast4"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="Button" />

                <Button
                    android:id="@+id/buttonFast3"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="Button" />

                <Button
                    android:id="@+id/buttonFast2"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="Button" />

                <Button
                    android:id="@+id/buttonFast1"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="Button" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


    <GridLayout
        android:id="@+id/gridTest"
        android:layout_width="620dp"
        android:layout_height="160dp"
        android:layout_below="@+id/horizontalScrollView2"
        android:layout_toLeftOf="@+id/relativeLayoutSummariesScreen"
        android:layout_toStartOf="@+id/relativeLayoutSummariesScreen"
        android:columnCount="4">

    </GridLayout>


</RelativeLayout>
